Update travis to increase permgen size.